# pichore

js/pichore-web-client/: .gitignore  package.json  tsconfig.json  webpack.config.js
js/pichore-web-client/src/: entry.tsx
py/: pyproject.toml
py/src/: .gitignore
py/src/pichore/: __init__.py
py/src/pichore/cli/: main.py
py/src/pichore/core/: model.py
py/src/pichore/webserver/: api.py  main.py  static
py/tests/: test_pichore.py
tools/docker/dev/: Dockerfile  docker-compose.yml
